<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bleu"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activiteListCoin.GeneseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bleu_ciel"
        android:minHeight="?actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp">

            <ImageView
                android:id="@+id/coinImage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/coin"
                android:src="@drawable/coin" />

            <TextView
                android:id="@+id/coinText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/coinImage"
                android:layout_toRightOf="@id/coinImage"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text=""
                android:textSize="25sp" />

            <TextView
                android:id="@+id/titre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/coinText"
                android:layout_toRightOf="@+id/coinText"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="25sp"
                tools:ignore="UnknownIdInLayout" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:background="@drawable/parchemin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/questionLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="35dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@color/grey"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/optionsContainer"
        android:orientation="vertical">

        <Button
            android:id="@+id/answerBtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/rounded_borders"
            android:onClick="checkAnswer"
            android:text="@string/answer1"
            android:textColor="@color/grey" />

        <Button
            android:id="@+id/answerBtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/rounded_borders"
            android:onClick="checkAnswer"
            android:text="@string/answer2"
            android:textColor="@color/grey" />


        <Button
            android:id="@+id/answerBtn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/rounded_borders"
            android:onClick="checkAnswer"
            android:text="@string/answer3"
            android:textColor="@color/grey" />

        <Button
            android:id="@+id/answerBtn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/rounded_borders"
            android:onClick="checkAnswer"
            android:text="@string/answer4"
            android:textColor="@color/grey" />

    </LinearLayout>

</LinearLayout>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:fbutton="http://schemas.android.com/apk/res-auto"-->
    <!--    android:id="@+id/activity_main"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    android:background="@color/backgroundColor"-->
    <!--    android:orientation="vertical">-->

    <!--    <android.support.v7.widget.Toolbar-->
    <!--        android:id="@+id/toolbar"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:background="@color/lightGreen"-->
    <!--        android:minHeight="?actionBarSize">-->

    <!--        <RelativeLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:padding="0dp">-->

    <!--            <ImageView-->
    <!--                android:id="@+id/coinImage"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:src="@drawable/coin" />-->

    <!--            <TextView-->
    <!--                android:id="@+id/coinText"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:layout_toRightOf="@id/coinImage"-->
    <!--                android:gravity="center"-->
    <!--                android:paddingLeft="5dp"-->
    <!--                android:paddingRight="5dp"-->
    <!--                android:text=""-->
    <!--                android:textSize="25sp" />-->

    <!--            <TextView-->
    <!--                android:id="@+id/titre"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:layout_toLeftOf="@+id/timeText"-->
    <!--                android:layout_toRightOf="@+id/coinText"-->
    <!--                android:gravity="center"-->
    <!--                android:text="@string/app_name"-->
    <!--                android:textColor="@color/white"-->
    <!--                android:textSize="25sp" />-->

    <!--&lt;!&ndash;            <TextView&ndash;&gt;-->
    <!--&lt;!&ndash;                android:id="@+id/timeText"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_width="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_height="match_parent"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_alignParentEnd="true"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_alignParentRight="true"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:gravity="center"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:paddingLeft="10dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:paddingRight="10dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:text="@string/time"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:textSize="20sp" />&ndash;&gt;-->

    <!--        </RelativeLayout>-->
    <!--    </android.support.v7.widget.Toolbar>-->

    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="10dp"></View>-->

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_weight=".7"-->
    <!--        android:background="@drawable/parchemin"-->
    <!--        android:orientation="vertical">-->

    <!--        <TextView-->
    <!--            android:id="@+id/triviaQuestion"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_margin="35dp"-->
    <!--            android:gravity="center"-->
    <!--            android:text="@string/question"-->
    <!--            android:textColor="@color/grey"-->
    <!--            android:textSize="20sp" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/resultText"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:gravity="center"-->
    <!--            android:text=""-->
    <!--            android:textColor="@color/green"-->
    <!--            android:textSize="30sp" />-->
    <!--    </LinearLayout>-->


    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_weight="1"-->
    <!--        android:gravity="center"-->
    <!--        android:orientation="vertical">-->

    <!--        <info.hoang8f.widget.FButton-->
    <!--            android:id="@+id/buttonA"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_margin="10dp"-->
    <!--            android:onClick="buttonA"-->
    <!--            android:text=""-->
    <!--            android:textColor="@color/grey" />-->

    <!--        <info.hoang8f.widget.FButton-->
    <!--            android:id="@+id/buttonB"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_margin="10dp"-->
    <!--            android:onClick="buttonB"-->
    <!--            android:text=""-->
    <!--            android:textColor="@color/grey" />-->


    <!--        <info.hoang8f.widget.FButton-->
    <!--            android:id="@+id/buttonC"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_margin="10dp"-->
    <!--            android:onClick="buttonC"-->
    <!--            android:text=""-->
    <!--            android:textColor="@color/grey" />-->

    <!--        <info.hoang8f.widget.FButton-->
    <!--            android:id="@+id/buttonD"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@drawable/planche"-->
    <!--            android:layout_margin="10dp"-->
    <!--            android:onClick="buttonD"-->
    <!--            android:text=""-->
    <!--            android:textColor="@color/grey" />-->

    <!--    </LinearLayout>-->


    <!--</LinearLayout>-->
